Adding more info

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -114,6 +114,10 @@ block content
             h3 Payment Information
             
             p Your will be charged <strong id="total_cost">N/A, please pick a date</strong>.
+            
+            .alert.alert-info 
+                strong Please note: 
+                | We will be allowing registrations the day of the event on-site but they will be $25.
 
             #payment-form
 
