--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -19,9 +19,9 @@ block content
         .col-md-6
           h1 Welcome
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p We're actually in the process of rebuilding for next fall, so check back soon.  
+          p We now welcome you to our upcoming beach round-robin series, being held on January 5th, February 2nd, and March 2nd!
       div.text-center
-        a.btn.btn-lg.btn-primary(href="/community") Check out local pickups
+        a.btn.btn-lg.btn-primary(href="/register") Sign up for the Beach Series
 
   .features
     .container
