--- a/templates/views/draftboard.jade
+++ b/templates/views/draftboard.jade
@@ -1,34 +1,33 @@
 extends ../layouts/default
 
 block content
-	.container(ng-app='draftboardApp')
-		if user
-			#loggedin
-		h1 Draftboard
-		#draftboard(ng-controller='PlayerTableController')
-			p.lead There are {{players.length}} players registered and {{matches/2}} couples.
-			table.table.table-hover.table-striped
-				thead
-					th Player ID
-					th Name
-					th Gender
-					th Skill
-					th Attendance
-					th Partner
-					th Partner Status
-				tbody
-					tr(ng-repeat='player in players | orderBy:"-skill"')
-						td
-							code(ng-click="viewProfile(player.id)") {{player.id}}
-						td {{player.full_name.first}} {{player.full_name.last}}
-						td {{player.gender}}
-						td {{player.skill}}
-						td {{player.participation}}
-						td {{player.partnerName}}
-						td
-							span(ng-if='player.partnerMatch' class='label label-info') Full Match
-							span(ng-if='player.partner && !player.partnerName' class='label label-default' style='opacity: 0.4') Half Match
+
+    .container-fluid(ng-app='draftboardApp')
+        if user
+            #loggedin
+
+        h1 Draftboard
+        #draftboard(ng-controller='PlayerTableController')
+            p.lead There are {{players.length}} players registered.
+            table.table.table-hover.table-striped
+                thead
+                    th Number
+                    th Name
+                    th Gender
+                    th Skill
+                    th Attendance
+                    th Partner
+                    th Comments
+                tbody
+                    tr(ng-repeat='player in players | orderBy:"-skill"')
+                        td {{$index + 1}}
+                        td {{player.name.first}} {{player.name.last}}
+                        td {{player.gender}}
+                        td {{player.skillLevel}}
+                        td {{player.dates_registered.join(", ")}}
+                        td {{player.partners}}
+                        td {{player.comments}}
 
 block js
-	script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js')
-	script(src='/js/draftboard.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js')
+    script(src='/js/draftboard.js')
