message for UM women's team

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,46 +1,26 @@
 <div>
-  
-  <img src="https://c1.staticflickr.com/5/4096/35723711496_44069cb264_h.jpg" alt="" style="max-width: 100%; height: auto;">
+  <img src="http://www.sflultimate.com/images/beach-ultimate-series-logo.jpg" alt="" style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
 
-  <div style="background-color: purple; border-top: 8px solid #4a1560; border-bottom: 8px solid #4a1560;">
-    <img src="http://www.sflultimate.com/images/logo-skyline.png" style="height: 150px; width: auto; display: block; text-align:left; margin: 0 auto 0 auto; padding-top: 10px;">
-  </div>
+  <div style="margin-top: 12px; background-color: #16aae6; border-top: 8px solid #0e6c92; border-bottom: 8px solid #0e6c92; height: 50px;">
+  </div>  
 
   <div style="padding: 1em;">
-
-    <p>Hello Players!</p>
     
-    <p><strong>Teams have been picked</strong> and we had an amazing 49 registrations, meaning we now have 6 teams!</p>
-
-    <p><strong>Our first game is this Saturday, November 2nd, at 10am. Please get there by 9:30am</strong> so you have time to meet your captains and your teammates.</p>
-
-    <p>There is $5 all day parking at Hugh Taylor Birch State Park (which has an easy access to the beach) or street parking.</p>
+    <p>Dear University of Miami's Women's Ultimate Team,</p>
     
-    <p>We highly recommend that you bring:</p>
-    <ul>
-      <li>A white and colored shirt/jersey</li>
-      <li>Water</li>
-      <li>Sun block</li>
-      <li>A insatiable appetite for ultimate &amp; friendship</li>
-    </ul>
-
-    <p>After our games, everyone is welcome to visit Park and Ocean for drinks/food, where the entreprenurial Sofia Whittaker got us all a special South Florida Ultimate 10% discount!</p>
-
-    <p>Now onto the excitement, go and see who is on your team!</p>
+    <p>We wanted to reach out and welcome you to the 2019 South Florida Ultimate Beach Series, which includes three key beach tournaments open to local teams here in front of Park & Ocean, a famous local beachfront restaurant.</p>
     
-    <a target="_blank" href="https://docs.google.com/spreadsheets/d/1W7MatAL0XuY50_I4laZ2Bclq2fs86IXlD-k4UHZ5Yf8/" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; text-decoration: none; text-align: center; max-width: 300px; background: purple; color: white; padding: .75em 2em; display: inline-block; text-transform: uppercase; font-weight: bold; border-radius: 5px; font-size: 18px; border-bottom: 3px solid #440844;">
-      See Your Team
-    </a>
-
-    <p>We do our best to respect partner requests, and we hope that you enjoy the teams we've created.  If you still have friends that would like to sign up, have them e-mail sflultimate@gmail.com</p>
+    <p>The event itself is $20 per player per tournament.  To encourage more college players, we are doing a group discount for college teams, which, for $300 dollars flat fee we will admit your entire program for both of the remaining tournament dates, on February 2nd, and March 2nd.</p>
     
-    <p>Sincerely,<br>
-       Your SFLUltimate Volunteers
-    </p>
+    <p>Our organization is a local non-for-profit dedicated to growing the ultimate community here in South Florida, by offering leagues, tournaments, clinics, and information.  All funds we raise we spend directly back into marketing, outreach, supplies to thrive our community.</p>
+    
+    <p>Please let us know if you have any questions.  Beach ultimate, beyond being one of the best things that Florida's coastline offers, trains your team to play in the wind and work on tight cuts and spacing.</p>
+    
+    <p>We really look forward to your attendance, and are here for you should you have any questions.</p>
+    
+    <p>Thanks,<br/>
+    The SFLUltimate Board</p>
 
-    <p>
-      <em>Photo credit: David Ho</em>
-    </p>
   </div>
 
   <div style="background-color: gray;background-color: #dddddd;text-align: center;padding: 18px;">
