--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,3 +1,5 @@
+<!-- Special Message & Beach Hatter Tomorrow: PLEASE READ -->
+
 <div>
   <img src="http://www.sflultimate.com/images/beach-ultimate-series-logo.jpg" alt="" style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
 
@@ -6,17 +8,31 @@
 
   <div style="padding: 1em;">
     
-    <p>Dear University of Miami's Women's Ultimate Team,</p>
+    <p>Hey Beach Players!</p>
     
-    <p>We wanted to reach out and welcome you to the 2019 South Florida Ultimate Beach Series, which includes three key beach tournaments open to local teams here in front of Park & Ocean, a famous local beachfront restaurant.</p>
-    
-    <p>The event itself is $20 per player per tournament.  To encourage more college players, we are doing a group discount for college teams, which, for $300 dollars flat fee we will admit your entire program for both of the remaining tournament dates, on February 2nd, and March 2nd.</p>
-    
-    <p>Our organization is a local non-for-profit dedicated to growing the ultimate community here in South Florida, by offering leagues, tournaments, clinics, and information.  All funds we raise we spend directly back into marketing, outreach, supplies to thrive our community.</p>
-    
-    <p>Please let us know if you have any questions.  Beach ultimate, beyond being one of the best things that Florida's coastline offers, trains your team to play in the wind and work on tight cuts and spacing.</p>
-    
-    <p>We really look forward to your attendance, and are here for you should you have any questions.</p>
+    <p>This is a special e-mail to all that have ever registered for our beach hatter.</p>
+
+    <p>Firstly, <strong>to everyone that has registered in all of our hatters</strong>, we want you to take a moment to help learn the story of <strong>Corinne of Rocco</strong> and their tragic accident.  They are lovely people that volunteer their time every day to grow the sport of ultimate in the Tampa Bay area that on New Year's eve suffered an intense blow from a drunk uninsured driver, leaving them in all worlds of emotional, financial, and physical pain.</p>
+
+    <p>Please take a moment to hear their story, learn about it, and contribute or share their cause.  People like Rocco & Corrine help make the game we enjoy possible, by building and supporting the communities we now are accustomed to.</p>
+
+    <a href="https://www.gofundme.com/help-corinne-and-rocco-recover">
+      <img src="https://d2g8igdw686xgo.cloudfront.net/36977330_1549831348454073_r.jpeg" alt="" style="display: block; margin: 0 auto; border: 8px solid #0e6c92; max-width: 600px; width: 100%;">
+    </a>
+
+    <p><strong>For those that are registered and attending tomorrow</strong>, here are some quick reminders for our final hatters:</p>
+
+    <ul>
+      <li>Bring socks to play in the sand!  It will be a sunny warm day tomorrow, and bring anything to help you stay cool.</li>
+      <li><strong>Games start at 10am sharp tomorrow</strong>. If you are planning to register tomorrow please show up between 9-9:30am so we can register you and make even teams.</li>
+      <li><strong>Bring a white and dark jersey.</strong></li>
+      <li>We do not have any deals or sponsorship with Hugh Taylor Birch State Park. Please do not ask for free parking. We suggest parking there as it is the most affordable option. Support Florida State Parks!</li>
+      <li>Please do not ask Park and Ocean to fill your ice coolers or store your gear. We are grateful to have Park and Ocean host us, please respect their wishes so we can have more events here in the future. There is a 7-11 across the street from the park entrance on Sunrise Blvd that is a good option for ice before you arrive.</li>
+      <li>After party is at Park and Ocean. All players get a 10% discount on food and bev!</li>
+      <li>Plan on playing (3) 50 minute games with breaks in between.</li>
+    </ul>
+
+    <p>In addition, we highly recommend that <a href="https://www.instagram.com/sflultimate/" target="_blank">you follow us on Instagram</a> for photos & videos of tomorrow's games, as we are excited for everyone.</p>
     
     <p>Thanks,<br/>
     The SFLUltimate Board</p>
