Made content updates to homepage

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -13,15 +13,15 @@ block css
 
 block content
 
-  .call-to-action(style='background-image:url("/images/hatter-beach-ultimate.jpg")')
+  .call-to-action(style='background-image:url("/images/tequesta-pickup.jpg")')
     .container
       .row
         .col-md-6
           h1 Welcome
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p We now welcome you to our upcoming beach round-robin series, being held on January 5th, February 2nd, and March 2nd!
+          p We welcome you here discover local pickups here in South Florida!
       div.text-center
-        a.btn.btn-lg.btn-primary(href="/register") Sign up for the Beach Series
+        a.btn.btn-lg.btn-primary(href="/community") Browse local pick ups
 
   .features
     .container
