--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -12,9 +12,15 @@
     
     <p>This is a special e-mail to all that have ever registered for our beach hatter.</p>
 
-    <p>Firstly, <strong>to everyone that has registered in all of our hatters</strong>, we want you to take a moment to help learn the story of <strong>Corinne of Rocco</strong> and their tragic accident.  They are lovely people that volunteer their time every day to grow the sport of ultimate in the Tampa Bay area that on New Year's eve suffered an intense blow from a drunk uninsured driver, leaving them in all worlds of emotional, financial, and physical pain.</p>
+    <p>Firstly, <strong>to everyone that has registered in all of our hatters</strong>, we want you to take a moment to help learn the story of <strong>Corinne & Rocco</strong> and their tragic accident.  They are lovely people that volunteer their time every day to grow the sport of ultimate in the Tampa Bay area that on New Year's eve suffered an intense blow from a drunk uninsured driver, leaving them in all worlds of emotional, financial, and physical pain.</p>
 
-    <p>Please take a moment to hear their story, learn about it, and contribute or share their cause.  People like Rocco & Corrine help make the game we enjoy possible, by building and supporting the communities we now are accustomed to.</p>
+    <p>Please take a moment to hear their story, learn about it, and contribute or share their cause.  People like Rocco & Corrine help make the game we enjoy possible, by building and supporting the communities we now are accustomed to. To learn more visit:</p>
+
+    <ul>
+      <li><a href="https://www.gofundme.com/help-corinne-and-rocco-recover">https://www.gofundme.com/help-corinne-and-rocco-recover</a></li>
+    </ul>
+
+    <p>Here's a photo of Corrine & Rocco at SSG:</p>
 
     <a href="https://www.gofundme.com/help-corinne-and-rocco-recover">
       <img src="https://d2g8igdw686xgo.cloudfront.net/36977330_1549831348454073_r.jpeg" alt="" style="display: block; margin: 0 auto; border: 8px solid #0e6c92; max-width: 600px; width: 100%;">
@@ -29,7 +35,7 @@
       <li>We do not have any deals or sponsorship with Hugh Taylor Birch State Park. Please do not ask for free parking. We suggest parking there as it is the most affordable option. Support Florida State Parks!</li>
       <li>Please do not ask Park and Ocean to fill your ice coolers or store your gear. We are grateful to have Park and Ocean host us, please respect their wishes so we can have more events here in the future. There is a 7-11 across the street from the park entrance on Sunrise Blvd that is a good option for ice before you arrive.</li>
       <li>After party is at Park and Ocean. All players get a 10% discount on food and bev!</li>
-      <li>Plan on playing (3) 50 minute games with breaks in between.</li>
+      <li>Plan on playing (3) 60 minute games with breaks in between.</li>
     </ul>
 
     <p>In addition, we highly recommend that <a href="https://www.instagram.com/sflultimate/" target="_blank">you follow us on Instagram</a> for photos & videos of tomorrow's games, as we are excited for everyone.</p>
