Added more info for el niño

--- a/templates/views/club-teams.jade
+++ b/templates/views/club-teams.jade
@@ -15,8 +15,12 @@ block content
             .col-md-9
                 h2 El Niño
                 strong Open
-                p El Niño Ultimate is a high-level open club team based out of Oakland Park, Florida.
-                a(href='https://www.facebook.com/oaklandparkelnino/' target="_blank") Facebook Page
+                p El Niño Ultimate is a high-level open club team based out of Oakland Park, Florida. In 2019, they were Florida Section Champions and in 2018 placed 5th at the  USAU South East Regional Championships.
+                ul.list-inline
+                   li
+                        a(href='https://www.facebook.com/oaklandparkelnino/' target="_blank") Facebook Page
+                   li
+                        a(href='http://www.elninoultimate.com' target='_blank') Website
         hr
         .row
             .col-md-3
