Minor grammar edit

--- a/templates/views/club-teams.jade
+++ b/templates/views/club-teams.jade
@@ -37,5 +37,5 @@ block content
             .col-md-9
                 h2 Fire Ultimate
                 strong Mixed
-                p Fire ultimate is a new mixed ultimate club team based from Miami with several team members
+                p Fire ultimate is a new mixed club ultimate team based from Miami.
                 a(href='https://www.facebook.com/FireUltimateClub/' target="_blank") Facebook Page
