--- a/templates/views/club-teams.jade
+++ b/templates/views/club-teams.jade
@@ -9,33 +9,19 @@ block content
     .container
         h1 Club Teams
         p.lead South Florida has several local club teams that compete at a state and national level.
-        .row
-            .col-md-3
-                img(src='/images/teams/el-nino.jpg' class='img-responsive')
-            .col-md-9
-                h2 El Niño
-                strong Open
-                p El Niño Ultimate is a high-level open club team based out of Oakland Park, Florida. In 2019, they were Florida Section Champions and in 2018 placed 5th at the  USAU South East Regional Championships.
-                ul.list-inline
-                   li
-                        a(href='https://www.facebook.com/oaklandparkelnino/' target="_blank") Facebook Page
-                   li
-                        a(href='http://www.elninoultimate.com' target='_blank') Website
-        hr
-        .row
-            .col-md-3
-                img(src='/images/teams/fiasco.jpg' class='img-responsive')
-            .col-md-9
-                h2 Fiasco
-                strong Women
-                p Fiasco is a high-level women's club team based in Broward and Dade counties.  Fiasco's next tryout is Sunday, May 19 from 12-3 in Biscayne Park at the Ed Burke Recreation Center.
-                a(href='https://www.facebook.com/fiascoultimate/' target="_blank") Facebook Page
-        hr
-        .row
-            .col-md-3
-                img(src='/images/teams/fire-ultimate.png' class='img-responsive')
-            .col-md-9
-                h2 Fire Ultimate
-                strong Mixed
-                p Fire ultimate is a new mixed club ultimate team based from Miami.
-                a(href='https://www.facebook.com/FireUltimateClub/' target="_blank") Facebook Page
+        
+        
+        for team in clubTeams
+            .row
+                .col-sm-3.text-center
+                    img(src=team.image class='img-responsive' style='margin: 0 auto;')
+                .col-sm-9
+                    h2=team.title
+                    p
+                        strong=team.category
+                    p=team.description
+                    ul.list-inline
+                        for link in team.links
+                            li
+                                a(href=link.url target="_blank")=link.label
+            hr
