--- a/templates/views/clinics.jade
+++ b/templates/views/clinics.jade
@@ -4,17 +4,59 @@ block head
     meta(property="og:title"        content="Host a Frisbee Clinics")
     meta(property="og:url"          content="http://www.sflultimate.com/clinics")
     meta(property="og:description"  content="Discover a way to host a ultimate frisbee clinic at your organization!")
+    
+    style.
+        img.parallax-image {
+            max-width: 100%;
+            width: 100%;
+            height: auto;
+        }
+
+        .simpleParallax {
+            height: 500px;
+        }
+        
+        .ultimate-soul-logo {
+            max-width: 300px;
+            height: auto;
+            text-align: center;
+            display: block;
+            margin: 0 auto;
+        }
+        
+        .team-image {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .site-footer {
+            margin-top: 0;
+        }
 
 block content
+    
+    img(class='parallax-image' src='/images/ultimate-soul/smiles.jpg')
+    
     .container
 
-        p ULTIMATE SOUL, inc.
+        img(src='/images/ultimate-soul/ultimate-soul-logo.png' class='ultimate-soul-logo')
+
+        h3 About Ultimate Soul
 
         p ULTIMATE SOUL, inc. is a nonprofit organization that perceives sports as a tool for education and self-improvement that aims to promote and foster positive values in individuals and low, medium, and high-performance athletes. We encourage sports as a tool for peace, a social concept where the dynamics between the elements create synergy that interacts with the direct and indirect context.
 
-        p We are world-level Ultimate players that have different professional backgrounds and our mission is to establish sports as an universal right
-        that fosters positive values.
+        p We are world-level Ultimate players that have different professional backgrounds and our mission is to establish sports as an universal right that fosters positive values.
 
         p Ultimate Soul, inc. is an organization that was born in Buenos Aires, Argentina. There we were able to facilitate ultimate clinics, develop different teams, and support these and other teams with organizational management processes. At last we leaved a historical legacy for the Ultimate community in Argentina, we managed thet team formation that represented the country for the first time in the Worl Ultimate Club Championship 2018 in Cincinatti, Ohio. With this team we were able to develop an inclusive process for all level players, that consisted in a wide range of skillset, from a Junior player to high level players.
 
         p We are currently a legally established nonprofit organization in USA. We are working along with South Florida Ultimate developing the community of Florida, where we are dedicated to the promotion of the sport establishing atlethism programs with a focus on sports psychology. We are leading the first youth Ultimate program in South Florida that includes children with psychiatric diagnosis (Attention Deficit /Hyperactivity Disorder, Oppositional Defiant Disorder, and Depression). As part of our Ultimate promotion projects, we have sponsored South Florida Ultimate tournaments and we have developed clinics for religious nonprofits in order to promote the sport and its values. Ultimate Soul, inc is also managing the organizational development of FIRE Ultimate Miami, a worldwide recognized team that was originated in Colombia and has now started its new team formation in Florida with our support. You can find more information about our services in our web page: https://ultimate-soul.com/
+
+    
+    img(class='team-image' src='/images/ultimate-soul/team.jpg')
+
+    script(src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.0.2/dist/simpleParallax.min.js")
+    script.
+        (function () {
+            var image = document.getElementsByClassName('parallax-image');
+            new simpleParallax(image);            
+        })();
