--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5873,10 +5873,19 @@ button.close {
   max-width: 60%; }
 
 .call-to-action {
+  position: relative;
   background-size: cover;
   background-position: center center;
   padding: 6em 0;
   color: white; }
+  .call-to-action .video-full-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    width: 100%; }
+    .call-to-action .video-full-screen video {
+      width: 100%; }
   .call-to-action h1 {
     margin-top: 0;
     animation-duration: 3s; }
@@ -5906,10 +5915,11 @@ button.close {
     animation-duration: 1s; }
 
 .features {
-  background-color: rgba(0, 0, 0, 0.1);
   color: black;
   font-size: 1.15em;
-  padding: 1em 0em; }
+  padding: 1em 0em;
+  position: relative;
+  background: white; }
   .features h3 {
     margin-top: 0.5em; }
 
