--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -10,13 +10,17 @@ block css
 
 block content
 
-  .call-to-action(style='background-image:url("/images/tequesta-pickup.jpg")')
+
+  .call-to-action(style='background-image:url("/images/beach-ultimate-cover.jpg")')
+    .video-full-screen
+      video(autoplay muted loop poster="/images/w3html5.gif")
+        source(src='http://d137pw2ndt5u9c.cloudfront.net/SFL_Community_Beach_Hatter_2019.mp4' type='video/mp4')
     .container
       .row
         .col-md-6
           h1 Welcome
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p We welcome you here discover local pickups here in South Florida!
+          p We welcome you here discover local pickups here in South Florida!  Our beach league is soon to start!
       div.text-center
         a.btn.btn-lg.btn-primary(href="/community") Browse local pick ups
 
@@ -28,7 +32,7 @@ block content
         article.col-sm-4.text-center
           i.fa.fa-smile-o.fa-4x
           h3 Community
-          p From club athletes to newbies, league welcomes players of all skills & ability 
+          p From club athletes to newbies, league welcomes players of all skills & ability
         article.col-sm-4.text-center
           i.fa.fa-trophy.fa-4x
           h3 Play Ultimate
@@ -47,7 +51,7 @@ block content
         .col-md-8
           div(ng-controller="ScheduleViewController")
             table.table.table-striped.table-bordered.text-center(style="margin-top: 2em;")
-              thead 
+              thead
                 th.text-center Color
                 th.text-center Wins
                 th.text-center Losses
@@ -64,7 +68,7 @@ block content
   section.champions
     aside.text-center
         h2 Hall of Fame
-        p The past champions of South Florida 
+        p The past champions of South Florida
     div
       for image in hallOfFameImages
         figure(style='background-image: url(/images/#{image});')
