--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -13,16 +13,16 @@ block content
 
   .call-to-action(style='background-image:url("/images/beach-ultimate-cover.jpg")')
     .video-full-screen
-      video(autoplay muted loop poster="/images/w3html5.gif")
+      video(autoplay muted loop)
         source(src='http://d137pw2ndt5u9c.cloudfront.net/SFL_Community_Beach_Hatter_2019.mp4' type='video/mp4')
     .container
       .row
         .col-md-6
           h1 Welcome
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p We welcome you here discover local pickups here in South Florida!  Our beach league is soon to start!
+          p We now welcome you to our first beach hatter this January 11th
       div.text-center
-        a.btn.btn-lg.btn-primary(href="/community") Browse local pick ups
+        a.btn.btn-lg.btn-primary(href="/register") Sign Up For Beach Hatters
 
   .features
     .container
