--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -1,10 +1,10 @@
 extends ../layouts/default
 
 block head
-    meta(property="og:title"        content="Register now for the SFL Ultimate Beach Series!")
-    meta(property="og:url"          content="http://www.sflultimate.com/register")
-    meta(property="og:description"  content="Sign up for the upcoming three beach hatters on January 5th, February 2nd, and March 2nd!")
-    meta(property="og:image"        content="http://www.sflultimate.com/images/beach-ultimate-series-logo.jpg")
+    meta(property="og:title" content="Register now for the SFL Ultimate Beach Series!")
+    meta(property="og:url" content="http://www.sflultimate.com/register")
+    meta(property="og:description" content="Sign up for the upcoming three beach hatters on January 11th & February 2nd")
+    meta(property="og:image" content="http://www.sflultimate.com/images/beach-ultimate-series-logo.jpg")
 
 block content
 
@@ -15,9 +15,8 @@ block content
             .alert.alert-danger
                 strong Error:
                 span=err
-
-        img.beach-series-logo(src='/images/beach-ultimate-series-logo.jpg')
-
+        br
+        br
         p Greetings beach ultimate lovers!
 
         p South Florida Ultimate is happy to announce a series of beach ultimate hat tournaments coming in 2020!
@@ -26,11 +25,11 @@ block content
         p The series consists of two beach ultimate Frisbee hat tournaments held on the following dates, each one starting at 10am sharp.
 
         ul
-            li Saturday January 11th, 2020
-            li Saturday February 2nd, 2020
+            li Saturday, January 11th, 2020
+            li Saturday, February 2nd, 2020
 
         p Register as an individual or as a pair. We'll make even teams and play a round robin!  The format will be 3:1 or 2:2 depending on attendance.
-        p Each event cost $20 per player. You can sign for each one individually or both for $30.
+        p Each event cost $20 per player. You can sign for each one individually or both for a discounted $30.
         p Post game tournament party is across the street at Park and Ocean!
 
         h3 Location
@@ -43,7 +42,6 @@ block content
         h3 Registration
 
         form#registration(method="post" action="register" autocomplete="off")
-
 
             .row
                 .col-md-6
@@ -61,7 +59,7 @@ block content
 
             .form-group
                 label(for='partner_name') Partner Name
-                input#partner_name.input-lg.form-control(type='text' name='partner_name' placeholder='' required)
+                input#partner_name.input-lg.form-control(type='text' name='partner_name' placeholder='')
 
             .form-group
                 label(for="gender" name="gender") Gender
@@ -92,12 +90,12 @@ block content
 
                 .checkbox
                     label
-                        input(type="checkbox" name="registration_dates" value="2019-01-05")
-                        | Saturday, January 5th, 2020
+                        input(type="checkbox" name="registration_dates" value="2020-01-11")
+                        | Saturday, January 11th, 2020
                 .checkbox
                     label
-                        input(type="checkbox" name="registration_dates" value="2019-02-03")
-                        | Saturday, February 3nd, 2020
+                        input(type="checkbox" name="registration_dates" value="2020-02-11")
+                        | Saturday, February 2nd, 2020
 
             h3 Waiver
 
@@ -108,7 +106,7 @@ block content
 
             h3 Payment Information
 
-            p Your will be charged <strong id="total_cost">N/A, please pick a date</strong>.
+            p You will be charged <strong id="total_cost">N/A, please pick a date</strong>.
 
             .alert.alert-info
                 strong Please note:
