Fixed empty partner issue

--- a/templates/views/draftboard.jade
+++ b/templates/views/draftboard.jade
@@ -9,13 +9,12 @@ block content
         h1 Draftboard
         #draftboard(ng-controller='PlayerTableController')
             p.lead There are {{players.length}} players registered.
-            
-            .button-group
-                .btn.btn-default(ng-click="") All
-                .btn.btn-default(ng-click="Feb 2nd") Jan. 5th Event
-                .btn.btn-default(ng-click="") Feb. 2nd
-                .btn.btn-default(ng-click="") March 2nd
-            
+
+            //.button-group
+            //    .btn.btn-default(ng-click="filterPlayers()") All
+            //    .btn.btn-default(ng-click="filterPlayers('2020-01-11')") Jan. 11th Event
+            //    .btn.btn-default(ng-click="filterPlayers('2020-02-02')") Feb. 2nd
+
             table.table.table-hover.table-striped
                 thead
                     th Number
